2006-10-02  Martin Baulig  <martin@ximian.com>

	* statement.cs: Fix the CS0135 check.

2006-10-02  Martin Baulig  <martin@ximian.com>

	* anonymous.cs: Add CS1688 check.

2006-10-02  Martin Baulig  <martin@ximian.com>

	* statement.cs: Fix the CS0136 check.

	* anonymous.cs: The container of an anonymous method is now a
	`Block' and not a `ToplevelBlock' anymore.  This became neccessary
	to implement the CS0136 check correctly.

2006-10-04  Raja R Harinath  <harinath@gmail.com>

	Fix #79577
	* namespace.cs (LookForAnyGenericType): Avoid nullref on
	'declspaces'.  Avoid allocating arrays willy-nilly.

	Fix #79553
	* cfold.cs (BinaryFold): Move boolean Equality and Inequality
	cases out of the switch.

2006-09-28  Marek Safar  <marek.safar@seznam.cz>

	* namespace.cs (Namespace.Error_NamespaceDoesNotExist): Better error
	message when non-generic type is used with the type arguments.
	* expression.cs: Updated.

2006-09-28  Raja R Harinath  <rharinath@novell.com>

	Fix #79013
	* convert.cs (Convert.ImplicitStandardConversionExists): Avoid infloop.
	* expression.cs (EmptyExpression.Grab, EmptyExpression.Release):
	Change semantics slightly.  Don't insist on having only one
	temporary EmptyExpression -- just throttle the creation of new ones.

	Fix #79451
	* ecore.cs (Expression.MemberLookup): Enable CS0229 errors for
	non-interfaces too.  If no methods are found, don't try to create
	a MethodGroupExpr.

2006-09-28  Marek Safar  <marek.safar@seznam.cz>

	* ecore.cs (ResolveAsTypeStep): Print better error when type can be
	generic type.

	* namespace.cs (Namespace.LookForAnyGenericType): New method to help
	us produce better error message.

2006-09-27  Marek Safar  <marek.safar@seznam.cz>

	* expression.cs (Binary.ResolveOperator): Warn about a side effect
	of the `|' operator.

	* report.cs: A new warning added.

2006-09-27  Martin Baulig  <martin@ximian.com>

	* generic.cs (GenericMethod): Don't make this abstract.

2006-09-27  Martin Baulig  <martin@ximian.com>
